Improve URI-to-Path conversion in `Payload.java`; remove redundant JimFS test; check if Windows CI passes